--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-crispy-bootstrap==0.1.1.1
 django-crispy-forms==1.8.1
 django-heroku==0.3.1
 django-tinymce==2.8.0
+gunicorn==20.0.4
 Pillow==6.2.1
 psycopg2==2.8.4
 python-decouple==3.3
